[package]
name = "pyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyst"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
#inline-python = "0.12.0"
rustpython = "0.3.0"
rustpython-vm = "0.3.0"
tch = "0.15.0"
